<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/themeBg"
    android:scrollbars="none" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title=""
        app:navigationIcon="@mipmap/ic_back"
        >

        <com.app.views.custom_views.UITextView
            style="@style/appTitleStyle"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cter_my_setting" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:orientation="vertical" >

        <com.app.views.custom_views.UITextView
            style="@style/textSecondary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarSize"
            android:gravity="bottom"
            android:layout_marginTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            android:paddingLeft="@dimen/margin"
            android:text="@string/set_normal_settring"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider" />

        <com.app.views.custom_views.UITextView
            android:id="@+id/txtVersion"
            style="@style/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarSize"
            android:background="@drawable/xml_view_selecter"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin"
            android:text="@string/more_version" />

        <View style="@style/line" />

        <com.app.views.custom_views.UITextView
            android:id="@+id/txtClearCache"
            style="@style/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarSize"
            android:background="@drawable/xml_view_selecter"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin"
            android:text="@string/more_images_cache" />

        <com.app.views.custom_views.UITextView
            style="@style/textSecondary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarSize"
            android:layout_marginTop="@dimen/margin"
            android:gravity="bottom"
            android:paddingBottom="@dimen/margin"
            android:paddingLeft="@dimen/margin"
            android:text="@string/set_support"
            />

        <View
            style="@style/line"
            android:layout_height="2dp"
            android:background="@color/divider" />

        <com.app.views.custom_views.UITextView
            android:id="@+id/txtFeedBack"
            style="@style/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarSize"
            android:background="@drawable/xml_view_selecter"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin"
            android:text="@string/cter_my_feedback" />

        <com.app.views.custom_views.UITextView
            style="@style/textSecondary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarSize"
            android:gravity="bottom"
            android:paddingBottom="@dimen/margin"
            android:paddingLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/set_about"
            />

        <View
            style="@style/line"
            android:layout_height="2dp"
            android:background="@color/divider" />

        <com.app.views.custom_views.UITextView
            android:id="@+id/txtAboutUs"
            style="@style/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarSize"
            android:background="@drawable/xml_view_selecter"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin"
            android:text="@string/set_about_us" />

        <View style="@style/line" />

        <com.app.views.custom_views.UITextView
            android:id="@+id/txtAugarMent"
            style="@style/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbarSize"
            android:background="@drawable/xml_view_selecter"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin"
            android:text="@string/set_server_port" />
    </LinearLayout>

</LinearLayout>