<?xml version="1.0" encoding="utf-8"?>
<com.app.views.custom_views.UICouponTabView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigatorSize"
    android:orientation="horizontal" >

    <!--可使用 -->

    <RadioButton
        android:id="@+id/radoTabUse"
        style="@style/navigatorStyle"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/themeBg"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/coupon_tab_use" />

    <!-- 已使用 -->
    <RadioButton
        android:id="@+id/radoInuse"
        style="@style/navigatorStyle"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/themeBg"
        android:layout_weight="1"
        android:text="@string/coupon_tab_inuse" />

    <!-- 已过期 -->
    <RadioButton
        android:id="@+id/radoOverdue"
        style="@style/navigatorStyle"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/themeBg"
        android:layout_weight="1"
        android:text="@string/coupon_tab_overdue" />





</com.app.views.custom_views.UICouponTabView>