<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    >


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        />


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@android:color/transparent"
        style="@style/Toolbar"
        app:title=""
        app:navigationIcon="@mipmap/ic_back"
        >

        <TextView
            android:id="@+id/txtRegist"
            style="@style/appTitleStyle"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/spacing"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/l_user_regist" />

    </android.support.v7.widget.Toolbar>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/banner_height"
        android:clipChildren="true"
        >

        <ImageView
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="@dimen/secondaryIconSize"
            android:src="@mipmap/account_bottom_line"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/secondaryIconSize"
            android:orientation="vertical"
            android:background="@color/themeBg"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing"
                >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etxtUserName"
                    style="@style/appEditTextStyle"
                    android:textSize="@dimen/text_size_title"
                    android:inputType="phone"
                    android:maxLength="18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_l_phone"
                    android:textCursorDrawable="@drawable/text_cursor_cyan"
                    app:met_iconLeft="@mipmap/ic_account_box_white_24dp"
                    app:met_floatingLabel="normal"
                    app:met_maxCharacters="11"
                    app:met_clearButton="true"
                    app:met_baseColor="@color/textPrimary"
                    app:met_primaryColor="@color/primaryColor"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etxtUserPwd"
                    style="@style/appEditTextStyle"
                    android:textSize="@dimen/text_size_title"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_l_pwd"
                    android:textCursorDrawable="@drawable/text_cursor_cyan"
                    app:met_iconLeft="@mipmap/ic_lock_open_white_24dp"
                    app:met_clearButton="true"
                    app:met_floatingLabel="normal"
                    app:met_baseColor="@color/textPrimary"
                    app:met_maxCharacters="16"
                    app:met_minCharacters="6"
                    app:met_primaryColor="@color/primaryColor" />

            </LinearLayout>


            <com.app.views.button.CircularProgressButton
                android:id="@+id/btnLogin"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonSize"
                android:layout_marginLeft="@dimen/spacing"
                android:layout_marginRight="@dimen/spacing"
                android:layout_marginTop="@dimen/spacing"
                android:singleLine="true"
                app:cpb_cornerRadius="@dimen/radiusCirular"
                app:cpb_iconComplete="@mipmap/ic_done_white_24dp"
                app:cpb_textIdle="@string/l_user_login"
                app:cpb_textError="@string/t_opreate_fail"
                />

            <TextView
                android:id="@+id/txtForgetPwd"
                style="@style/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing"
                android:paddingLeft="@dimen/spacing"
                android:layout_marginTop="@dimen/spacing"
                android:autoLink="none"
                android:singleLine="true"
                android:text="@string/l_forget_pwd" />

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal"
                >

                <com.app.views.custom_views.UITextView
                    android:id="@+id/txtWXLogin"
                    style="@style/textSecondary"
                    android:background="@drawable/xml_view_selecter"
                    android:layout_width="0dp"
                    android:clickable="true"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/margin"
                    android:drawableTop="@mipmap/ico_weixin"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/l_weixin_login" />

                <View
                    android:layout_width="0.2dp"
                    android:layout_height="82dp"
                    android:background="@color/divider"/>

                <com.app.views.custom_views.UITextView
                    android:id="@+id/txtQQLogin"
                    style="@style/textSecondary"
                    android:background="@drawable/xml_view_selecter"
                    android:layout_width="0dp"
                    android:paddingTop="@dimen/margin"
                    android:layout_height="match_parent"
                    android:drawableTop="@mipmap/ico_qq"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/l_qq_login" />

                <View
                    android:layout_width="0.2dp"
                    android:layout_height="82dp"
                    android:background="@color/divider"/>

                <com.app.views.custom_views.UITextView
                    android:id="@+id/txtSinaLogin"
                    style="@style/textSecondary"
                    android:background="@drawable/xml_view_selecter"
                    android:layout_width="0dp"
                    android:paddingTop="@dimen/margin"
                    android:layout_height="match_parent"
                    android:drawableTop="@mipmap/ico_sina"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/l_sina_login" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
