<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title="">

        <TextView
            style="@style/appTitleStyle"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_gravity="center"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:text="@string/toolbar_cart"
            />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rlayBottomBar"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/margin"
        android:layout_alignParentBottom="true"
        android:layout_height="@dimen/actionbarSize">

        <TextView
            android:id="@+id/txtSelectAll"
            style="@style/textPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:drawableLeft="@mipmap/icon_radio_n"
            android:layout_marginLeft="@dimen/spacing"
            android:text="@string/cart_all_select" />


        <TextView
            android:id="@+id/txtPayCart"
            style="@style/textPrimary"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_title"
            android:background="@drawable/xml_button"
            android:text="@string/cart_pay"
            android:gravity="center"
            android:minWidth="90dp"
            android:paddingLeft="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/txtPayCart"
            android:layout_marginRight="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/appTitleStyle"
                    android:textColor="@color/promptColor"
                    android:text="@string/cart_all_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtAllCount"
                    style="@style/appTitleStyle"
                    android:textColor="@color/promptColor"
                    android:text="0.0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:id="@+id/txtServiceTip"
                style="@style/textSecondary"
                android:text="@string/no_server_const"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>


    <include layout="@layout/app_listview"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@id/rlayBottomBar"
        android:layout_below="@id/toolbar"
        />

</RelativeLayout>
